# pais

./: .gitignore  CMakeLists.txt  LICENSE  PULL_REQUEST.md  README.md
assets/shaders/: README.md  basic.metal  culling.comp  default.frag  default.vert  instanced.frag  instanced.vert  lod.comp  shadow_depth.frag  shadow_depth.vert  shadow_depth_instanced.frag  shadow_depth_instanced.vert
assets/shaders/metal/: shaders.metal
docs/: dx12_backend_setup.md  rhi_uniform_buffers.md
include/pixel/app/: orbit_camera_controller.hpp
include/pixel/core/: clock.hpp
include/pixel/input/: input_manager.hpp
include/pixel/math/: color.hpp  math.hpp  vec2.hpp  vec3.hpp  vec4.hpp
include/pixel/platform/: platform.hpp  resources.hpp  shader_loader.hpp  window.hpp
include/pixel/renderer2d/: renderer.hpp
include/pixel/renderer3d/: clip_space.hpp  lod.hpp  mesh.hpp  primitives.hpp  renderer.hpp  renderer_fwd.hpp  renderer_include.hpp  renderer_instanced.hpp  shader_reflection.hpp  shader_variant_system.hpp  shadow_map.hpp  types.hpp
include/pixel/renderer3d/metal/: metal_renderer.hpp
include/pixel/resources/: texture_loader.hpp
include/pixel/rhi/: handles.hpp  rhi.hpp  types.hpp
include/pixel/rhi/backends/gl/: device_gl.hpp
include/pixel/rhi/backends/metal/: device_metal.hpp  metal_internal.hpp  metal_renderer.hpp
schemas/: CMakeLists.txt
schemas/flatbuffers/: world.fbs
scripts/dev/: gen_flatbuffers.sh
src/app/: CMakeLists.txt  main.cpp  orbit_camera_controller.cpp
src/core/: CMakeLists.txt  clock.cpp
src/input/: CMakeLists.txt  input_manager.cpp
src/math/: CMakeLists.txt  vec2.cpp  vec3.cpp
src/platform/apple/: AppIcon.icns  Info.plist  platform_apple.cpp
src/platform/common/: CMakeLists.txt  platform.cpp  resources.cpp  shader_loader.cpp  window.cpp
src/renderer2d/: renderer.cpp
src/renderer3d/: CMakeLists.txt  camera.cpp  clip_space.cpp  device_factory.cpp  lod.cpp  mesh.cpp  primitives.cpp  renderer.cpp  renderer_factory.cpp  renderer_instanced.cpp  renderer_primitives.cpp  renderer_texture.cpp  shader.cpp  shader_reflection.cpp  shader_variant_system.cpp  shadow_map.cpp  vectormath.cpp
src/renderer3d/metal/: metal_backend.mm  metal_renderer.mm
src/resources/: CMakeLists.txt  texture_loader.cpp
src/rhi/: CMakeLists.txt  rhi_dispatch.cpp
src/rhi/backends/dx12/: device_dx12.cpp
src/rhi/backends/gl/: cmd_gl.cpp  device_gl.cpp  device_gl.hpp  pipeline_gl.cpp  resources_gl.cpp  state_gl.cpp
src/rhi/backends/metal/: cmd_metal.mm  device_metal.hpp  device_metal.mm  metal_backend.hpp  metal_backend.mm  metal_factory.cpp  metal_internal.hpp  metal_renderer.mm  pipeline_metal.mm  resources_metal.mm  shaders.metal  state_metal.mm
src/rhi/backends/vulkan/: cmd_vk.cpp  device_vk.cpp  device_vk.hpp  device_vulkan.cpp  vk_mem_alloc.hpp
src/telemetry/: CMakeLists.txt  telemetry.cpp  telemetry.hpp
tests/unit/: CMakeLists.txt  core_clock_test.cpp  metal_compute_test.mm
